--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,53 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-width{
+  width: 370px;
+  background: linear-gradient(to top, #174949 0%, #327b7b 100%);
+  color:white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-div{
+    width: 400px;
+    padding: 10px;
+    border: 1px solid black;
+    margin:15px;
+    margin-left: auto; 
+    margin-right: auto;
+    border-radius: 5px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+  text-align: center;
+  width:600px;
+  height:300px;
+  background-color:white;
+  outline: solid 1px black;
+  padding-top:20px;
+  padding-left:15px;
+  padding-right:15px;
+  margin-left: auto; 
+  margin-right: auto;
+  border-radius: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.st-box {
+  float:left;
+  width:180px;
+  height:160px;
+  background-color:white;
+  /* border:solid black; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nd-box {
+  float:left;
+  width:180px;
+  height:160px;
+  background-color:white; 
+  /* border:solid black; */
+  margin-left:20px;
+}
+.rd-box {
+  float:right;
+  width:180px;
+  height:160px;
+  background-color:white;
+  /* border:solid black; */
 }
